test/expected/explain_hc.out
explain short char x
        ^
9: error: "short char" is illegal for built-in type
